fix  alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -43,10 +43,9 @@ li div {
 }
 
 li img {
-    margin-right: 20px;
-    margin-top: 20px;
-    display: table-cell;
-    vertical-align: middle;
+    display: block;
+    text-align: center;
+    text-decoration: none;
 }
 
 .wrapper {
